[gd_scene load_steps=11 format=3 uid="uid://c4j21mttvd2kw"]

[ext_resource type="StyleBox" uid="uid://dwxqhhtunho3f" path="res://ui/resources/dialog_styles.tres" id="1_nx540"]
[ext_resource type="Texture2D" uid="uid://6ixebs2ji4af" path="res://assets/ui_icons/building_icons/housing.png" id="2_otqcd"]
[ext_resource type="Script" uid="uid://bte2qtsx71ptu" path="res://ui/views/map-editor/roadside-object-panel/roadside_object_panel.gd" id="2_sf045"]
[ext_resource type="Texture2D" uid="uid://b4kx6f41nqwv7" path="res://assets/ui_icons/building_icons/shop.png" id="3_sf045"]
[ext_resource type="Texture2D" uid="uid://bx2uifubpqfjb" path="res://assets/ui_icons/building_icons/factory.png" id="4_bgvvu"]
[ext_resource type="Texture2D" uid="uid://udjifobt8ee1" path="res://assets/ui_icons/building_icons/depot.png" id="5_mjo3i"]
[ext_resource type="Texture2D" uid="uid://ndy1fejwgk4q" path="res://assets/ui_icons/building_icons/terminal.png" id="6_16fu5"]
[ext_resource type="Texture2D" uid="uid://fa5sou2rve5h" path="res://assets/ui_icons/building_icons/stop.png" id="7_tglo1"]
[ext_resource type="Texture2D" uid="uid://di5o8wo5nrqtr" path="res://assets/ui_icons/chevron_down.png" id="8_otqcd"]

[sub_resource type="LabelSettings" id="LabelSettings_nx540"]
font_size = 12

[node name="RoadsideObjectPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -827.0
offset_bottom = -542.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_nx540")
script = ExtResource("2_sf045")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="MainWrapper" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
vertical = true

[node name="Label" type="Label" parent="MarginContainer/MainWrapper"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Buildings"
label_settings = SubResource("LabelSettings_nx540")

[node name="Buttons" type="BoxContainer" parent="MarginContainer/MainWrapper"]
layout_mode = 2
size_flags_vertical = 4

[node name="Residential" type="Button" parent="MarginContainer/MainWrapper/Buttons"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Residential Building"
focus_mode = 0
icon = ExtResource("2_otqcd")
icon_alignment = 1

[node name="Commercial" type="Button" parent="MarginContainer/MainWrapper/Buttons"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Commercial Building"
focus_mode = 0
icon = ExtResource("3_sf045")
icon_alignment = 1

[node name="Industrial" type="Button" parent="MarginContainer/MainWrapper/Buttons"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Industrial Building"
focus_mode = 0
icon = ExtResource("4_bgvvu")
icon_alignment = 1

[node name="Depot" type="Button" parent="MarginContainer/MainWrapper/Buttons"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Bus Depot"
focus_mode = 0
icon = ExtResource("5_mjo3i")
icon_alignment = 1

[node name="Terminal" type="Button" parent="MarginContainer/MainWrapper/Buttons"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Terminal"
focus_mode = 0
icon = ExtResource("6_16fu5")
icon_alignment = 1

[node name="Stop" type="Button" parent="MarginContainer/MainWrapper/Buttons"]
custom_minimum_size = Vector2(44, 44)
layout_mode = 2
tooltip_text = "Bus Stop"
focus_mode = 0
icon = ExtResource("7_tglo1")
icon_alignment = 1

[node name="HideButtonWrapper" type="BoxContainer" parent="MarginContainer/MainWrapper"]
layout_mode = 2

[node name="HidePanelButton" type="Button" parent="MarginContainer/MainWrapper/HideButtonWrapper"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
tooltip_text = "Hide panel"
focus_mode = 0
icon = ExtResource("8_otqcd")
flat = true
expand_icon = true
